--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
   <section id="contact" class="container">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:tripathimohanish@gmail.com">mohanishtripathi@example.com</a></p>
+    <p>Email: <a href="mailto:tripathimohanish@gmail.com">tripathimohanish@gmail.com</a></p>
     <p>GitHub: <a href="https://github.com/mohanishtripathi" target="_blank">github.com/mohanishtripathi</a></p>
     <p>LinkedIn: <a href="#" target="_blank">linkedin.com/in/mohanishtripathi</a></p>
   </section>
