--- a/index.html
+++ b/index.html
@@ -13,8 +13,18 @@
     footer { background-color: #0d6efd; color: white; text-align: center; padding: 20px 0; }
     a { color: #0d6efd; text-decoration: none; }
     a:hover { text-decoration: underline; }
-    .project-card { background: white; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); padding: 20px; margin-bottom: 20px; transition: transform 0.2s; }
-    .project-card:hover { transform: translateY(-5px); }
+    .project-card { 
+      background: white; 
+      border-radius: 8px; 
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1); 
+      padding: 20px; 
+      margin-bottom: 20px; 
+      transition: transform 0.2s, box-shadow 0.2s;
+    }
+    .project-card:hover { 
+      transform: translateY(-5px); 
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15); 
+    }
   </style>
 </head>
 <body>
@@ -38,7 +48,6 @@
 
     <div class="row">
 
-      <!-- EV Hub App -->
       <div class="col-md-4 mb-4">
         <div class="project-card h-100">
           <h5>⚡ EV Hub App</h5>
@@ -46,7 +55,6 @@
         </div>
       </div>
 
-      <!-- Fitness App -->
       <div class="col-md-4 mb-4">
         <div class="project-card h-100">
           <h5>💪 Fitness App</h5>
@@ -54,7 +62,6 @@
         </div>
       </div>
 
-      <!-- Smart Farming App -->
       <div class="col-md-4 mb-4">
         <div class="project-card h-100">
           <h5>🌾 Smart Farming App</h5>
@@ -62,7 +69,6 @@
         </div>
       </div>
 
-      <!-- To-Do List App -->
       <div class="col-md-4 mb-4">
         <div class="project-card h-100">
           <h5>🧾 To-Do List App</h5>
@@ -70,7 +76,6 @@
         </div>
       </div>
 
-      <!-- Student Record System -->
       <div class="col-md-4 mb-4">
         <div class="project-card h-100">
           <h5>🎓 Student Record System</h5>
@@ -78,7 +83,6 @@
         </div>
       </div>
 
-      <!-- Weather App -->
       <div class="col-md-4 mb-4">
         <div class="project-card h-100">
           <h5>🌤️ Weather App</h5>
@@ -86,7 +90,6 @@
         </div>
       </div>
 
-      <!-- Mini Chat App -->
       <div class="col-md-4 mb-4">
         <div class="project-card h-100">
           <h5>💬 Mini Chat App</h5>
@@ -94,7 +97,6 @@
         </div>
       </div>
 
-      <!-- Quote of the Day App -->
       <div class="col-md-4 mb-4">
         <div class="project-card h-100">
           <h5>📜 Quote of the Day App</h5>
@@ -102,7 +104,6 @@
         </div>
       </div>
 
-      <!-- File Upload App -->
       <div class="col-md-4 mb-4">
         <div class="project-card h-100">
           <h5>📂 File Upload App</h5>
@@ -128,7 +129,7 @@
     <h2>Contact</h2>
     <p>Email: <a href="mailto:tripathimohanish@gmail.com">tripathimohanish@gmail.com</a></p>
     <p>GitHub: <a href="https://github.com/mohanishtripathi" target="_blank">github.com/mohanishtripathi</a></p>
-    <p>LinkedIn: <a href="#" target="_blank">linkedin.com/in/mohanishtripathi</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/mohanish-tripathi-57b1b325b" target="_blank">linkedin.com/in/mohanish-tripathi-57b1b325b</a></p>
   </section>
 
   <footer>
@@ -137,4 +138,5 @@
 
 </body>
 </html>
+
 
